--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,29 @@ main img#bugdroid-img {
     margin: auto;
 }
 
+article.emconstrucao {
+    display: flex;
+    flex-direction: column;
+}
+article.emconstrucao > p {
+    font-size: 1.3em;
+    font-family: var(--fonte-destaque);
+    color: var(--cor3);
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    border-radius: 5px;
+    padding-left: 5px;
+    font-weight: bold;
+    order: 0;
+}
+
+/* tag inserida dinamicamente por javascript */
+
+article.emconstrucao > #foto{
+    order: 1;
+    margin-top: 10px;
+    border-radius: 10%;
+}
+/********************************************/
 div.video {
     background-color: var(--cor3);
     margin: 0px -20px 30px -20px;
@@ -167,6 +190,7 @@ aside {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.411);
+    order: 2;
 }
 
 aside.pc {
